# MagneticHaptic

./: .gitignore  CMakeLists.txt  GPIO826.cpp  GPIO826.hpp  README.md  controller.cpp  controller.hpp  main.cpp  simple826.cpp  simple826.hpp  system_config.hpp  telerob826.cpp  telerob826.hpp  telerobcamera.cpp  telerobcamera.hpp  type.hpp
Filter/: CMakeLists.txt  ImageFilter.cpp  Kalman_acceleration.cpp  aruco_kalman.cpp  filter.cpp  filter.hpp
vision/: CMakeLists.txt  Filter.cpp  Filter.hpp  PoseEstimate.cpp  PoseEstimate.hpp  TattileCamera.cpp  TattileCamera.hpp  TattileCamera2.cpp  TattileCamera2.hpp  cam_full_frame_live.cpp  common.h  filter.cpp  filter.hpp  live_ROI.cpp  live_ROI_MultiThreaded.cpp  main.cpp
vision/FullFrame/: CMakeLists.txt  cam_full_frame_live.cpp  common.cpp
vision/calibration/: cam_left.yml
