cmake_minimum_required(VERSION 3.10)
project(Testing_Opencv)
set (CMAKE_CXX_STANDARD 11)
find_package( OpenCV REQUIRED PATHS /Users/ashkan/opencv/build_opencv)
# find_package (Threads)
add_executable(test opencv_test.cpp)
add_executable(test2 aruco_kalman.cpp)
add_executable(test3 kalman_acceleration.cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -D_LINUX -no-pie -lm")
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

target_link_libraries(test ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} m)
target_link_libraries(test2 ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} m)
target_link_libraries(test3 ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} m)
